feat: Add reload config from disk button, fix issues with text fields, add text field suggestions
Text field suggestions are taken from `ForgeroConfigurationLoader.defaultConfig`, and ellipsized.
Text fields no longer have brackets in them, and save properly now.